crates/solidity-v2/testing/snapshots/semantic_output/yul/identifiers_with_dots/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Unexpected YulPeriod. One of YulBreakKeyword, YulCloseBrace, YulColonEqual, YulComma, YulContinueKeyword, YulDecimalLiteral, YulFalseKeyword, YulForKeyword, YulFunctionKeyword, YulHexLiteral, YulHexStringLiteral, YulIdentifier, YulIfKeyword, YulLeaveKeyword, YulLetKeyword, YulOpenBrace, YulStringLiteral, YulSwitchKeyword, YulTrueKeyword was expected
   ╭─[input.sol:4:18]
   │
 4 │             let x.y.z := 0
   │                  ┬  
   │                  ╰── Error occurred here.
───╯
------------------------------------------------------------------------

Definitions (0):

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
